# canvas-info

./: .flake8  .gitignore  README.md  app-create-mac.sh  app-create.bat  app-gui-bundle.spec  app-spec-cli-bundle.spec  app-spec-cli-file.spec  app-spec-gui.spec  app-spec-mac-gui.spec  canvas_info.py  canvas_info.spec  canvas_info_cli.py  canvas_info_gui.py  canvasinfo.py  pyinstall.zsh  pyproject.toml  repobee_gui.py  requirements.txt  setup.py  spec-cli-file.spec  spec_cli_bundle.spec  test.py
repobee_canvas/: canvas.py  canvas_git_map.py  common.py  gui.py  tiphelp.py
repobee_canvas.egg-info/: SOURCES.txt  requires.txt
repobee_canvas/canvas_api/: api.py  assignment.py  canvas_object.py  course.py  group.py  user.py
repobee_canvas/command/: canvas_category.py  create_canvas_git_mapping.py  create_students_files.py  create_students_info_file.py  create_students_yaml_file.py  verify_course_id.py
src/canvasinfo/: __init__.py  __main__.py  app.py  cli.py
src/canvasinfo/canvas/: __init__.py  canvas_git_map.py  create_students_files.py  verify_course_id.py
src/canvasinfo/core/: __init__.py  course_manager.py  settings.py
src/canvasinfo/gui/: __init__.py  main_window.py  tooltips.py
src/canvasinfo/workers/: __init__.py  canvas_worker.py
tests/: test_verify_account.py
