[build-system]
requires = ["briefcase"]
build-backend = "briefcase"

[project]
name = "canvasinfo"
version = "1.0.0"
description = "Canvas course information manager"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "EUPL-1.2"}
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "xlsxwriter",
    "requests>=2.25",
    "canvasapi",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/your-username/canvasinfo"
Repository = "https://github.com/your-username/canvasinfo"

[tool.briefcase]
project_name = "Canvas Info"
bundle = "com.example"
version = "1.0.0"
url = "https://github.com/your-username/canvasinfo"
license = "EUPL-1.2"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.canvasinfo]
formal_name = "Canvas Info"
description = "Canvas course information manager"
long_description = """A tool for managing Canvas course information and generating student files."""
icon = "resources/icon"
sources = ["src/canvasinfo"]
requires = [
    "PySide6>=6.5.0",
    "xlsxwriter",
    "requests>=2.25",
    "canvasapi",
    "PyYAML",
]

[tool.briefcase.app.canvasinfo.macOS]
requires = [
    "PySide6>=6.5.0",
    "xlsxwriter",
    "requests>=2.25",
    "canvasapi",
    "PyYAML",
]

[tool.briefcase.app.canvasinfo.linux]
requires = [
    "PySide6>=6.5.0",
    "xlsxwriter",
    "requests>=2.25",
    "canvasapi",
    "PyYAML",
]

[tool.briefcase.app.canvasinfo.windows]
requires = [
    "PySide6>=6.5.0",
    "xlsxwriter",
    "requests>=2.25",
    "canvasapi",
    "PyYAML",
]